feat: 新增分类、删除

--- a/src/Layout/index.scss
+++ b/src/Layout/index.scss
@@ -1,4 +1,9 @@
-.my-header{
-  line-height: 26px;
-  text-align: right;
+
+.ant-layout-header{
+  background-color: transparent;
+  .my-header{
+    line-height: 26px;
+    text-align: right;
+  }
+  
 }
