--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -14,7 +14,8 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .site-layout .site-layout-background {
-  background: #fff;
+  // background: #fff;
+  
 }
 body{
   // background-color: aquamarine;
